修改网关业务逻辑bug, 更新sdk已知错误